kustomize/base/octopub-audits-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: octopub-audit-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: auditservice
  ports:
    - port: 10000
      targetPort: 10000
      name: http-audit
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: octopub-audit-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: auditservice
  template:
    metadata:
      labels:
        component: auditservice
    spec:
      containers:
        - name: auditservice
          image: octopussamples/octopub-audit-microservice-mysql
          ports:
            - name: http-audit
              containerPort: 10000
