kustomize/base/octopub-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: octopub-frontend-cluster-ip
spec:
  type: ClusterIP
  selector:
    component: web
  ports:
    - port: 8080
      targetPort: 8080
      name: http-port
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: octopub-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: web
          image: octopussamples/octopub-frontend
          ports:
            - containerPort: 8080
              name: http-port
